@@ -1,0 +1,16 @@
+        <form name="login_form" method="post" action="index.py?page=perform_login">
+        <input type="hidden" name="page" value="login" />
+        <table border="0" cellspacing="5" cellpadding="0">
+          <tr>
+            <td class="style3">Username:</td>
+            <td><input class="login_form_element" name="username" type="text" size="15" maxlength="15"></td>
+          </tr>
+          <tr>
+            <td class="style3">Password:</td>
+            <td><input class="login_form_element" name="password" type="password" size="15" maxlength="15"></td>
+          </tr>
+          <tr>
+            <td colspan="2" align="right"><input class="form_element" name="login" value="Login" type="submit" /></td>
+          </tr>
+        </table>
+        </form>
