@@ -2,9 +2,11 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.5 2004/11/03 12:31:03 port001 Exp $
+# $Id: ChangeLog,v 1.6 2004/11/03 14:09:30 port001 Exp $
 
 03 Nov 2004; Ian Leitch <port001@gentoo.org>:
+ * Moved login form out of the Header and into it's own page. Header executing
+   code = bad. Still needs work.    
  * Bug fixes.
 
 28 Oct 2004; Scott Hadfield <hadfield@gentoo.org>:
